--- a/package.json
+++ b/package.json
@@ -14,7 +14,12 @@
   "dependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.1.4"
+    "next": "15.1.4",
+    "lucide-react": "0.477.0",
+    "@signalco/ui": "0.2.5",
+    "@signalco/ui-primitives": "0.4.2",
+    "@signalco/ui-notifications": "0.2.0",
+    "@signalco/ui-themes-minimal": "0.1.3"
   },
   "devDependencies": {
     "typescript": "^5",
